# py-orthpol

./: meson.build  pyproject.toml  setup.py
demos/: demo1.py  demo10.py  demo11.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  demo9.py
orthpol/: __init__.py  _lancz.py  _orthogonal_polynomial.py  _quadrature_rule.py
src/: d1mach.f  r1mach.f
unittests/: test.py
